VIDEO-11812 - Added entitlements for PiP iOS 15

--- a/VideoApp/VideoApp/Video.entitlements
+++ b/VideoApp/VideoApp/Video.entitlements
@@ -6,5 +6,7 @@
 	<array>
 		<string>applinks:twilio-video-react.appspot.com</string>
 	</array>
+    <key>com.apple.developer.avfoundation.multitasking-camera-access</key>
+    <true/>
 </dict>
 </plist>
