--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,9 @@ commands:
       - setup
       - run:
           name: Setup code signing
-          command: bundle exec fastlane ci_match_install
+          command: |
+            bundle update fastlane
+            bundle exec fastlane ci_match_install
       - run:
           name: Deploy to App Center
           command: bundle exec fastlane beta
