--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,9 @@ commands:
       - run:
           name: Install secrets
           command: base64 -D \<<< $SECRETS_TAR | tar -x
+      - run:
+          name: Install Firebase secrets
+          command: echo $FIREBASE_IOS_AHOY_APP_SECRET | base64 -D -o voice-app-ead2b0c2da6d.json
       - restore_cache:
           key: v1-gems-{{ checksum "Gemfile.lock" }}
       - run:
